--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
     "react-tsparticles": "^2.12.2",
     "swiper": "^11.1.4",
-    "tsparticles": "^3.4.0"
+    "tsparticles": "^3.4.0",
+    "tsparticles-slim": "^2.12.0"
   },
   "devDependencies": {
     "@types/node": "^20",
